unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Commitment_Days__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Commitment_Days__c</fullName>
    <formula>IF(
AND(
ISBLANK(SRM_PP_Commitment_End_Date__c),
NOT(ISBLANK(SRM_PP_Commitment_Start_Date__c))),
Today() - SRM_PP_Commitment_Start_Date__c,
SRM_PP_Commitment_End_Date__c - SRM_PP_Commitment_Start_Date__c)</formula>
    <label>Days In Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>