unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Commitment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Commitment_End_Date__c</fullName>
    <description>End date for Commitment</description>
    <label>Commitment End Date</label>
    <type>Date</type>
</CustomField>