unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Commitment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Commitment_Start_Date__c</fullName>
    <description>Start date of Commitment</description>
    <label>Commitment Start Date</label>
    <type>Date</type>
</CustomField>