unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Cultivation_Discovery_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Cultivation_Discovery_End_Date__c</fullName>
    <description>End date of Cultivation Discovery Stage</description>
    <label>Cultivation / Discovery End Date</label>
    <type>Date</type>
</CustomField>