unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Cultivation_Discovery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Cultivation_Discovery_Start_Date__c</fullName>
    <description>Start date of Cultivation Discovery Stage (accounts)</description>
    <label>Cultivation / Discovery Start Date</label>
    <type>Date</type>
</CustomField>