unpackaged/main/default/objects/Opportunity/fields/SRM_PP_DiscoveryDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_DiscoveryDate__c</fullName>
    <description>Timestamp start date for 5th stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Cultivation / Discovery</inlineHelpText>
    <label>Cultivation Discovery Date</label>
    <type>Date</type>
</CustomField>