unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Engagement_Proposal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Engagement_Proposal_End_Date__c</fullName>
    <description>End date of Engagement proposal  Stage</description>
    <label>Engagement / Proposal End Date</label>
    <type>Date</type>
</CustomField>