unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Engagement_Proposal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Engagement_Proposal_Start_Date__c</fullName>
    <description>Start date of Engagement proposal  Stage</description>
    <label>Engagement / Proposal Start Date</label>
    <type>Date</type>
</CustomField>