unpackaged/main/default/objects/Opportunity/fields/SRM_PP_EngagementDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_EngagementDate__c</fullName>
    <description>Timestamp start date for 6th stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Engagement / Proposal</inlineHelpText>
    <label>Engagement Proposal Date</label>
    <type>Date</type>
</CustomField>