unpackaged/main/default/objects/Opportunity/fields/SRM_PP_HoldCloseNotes__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_HoldCloseNotes__c</fullName>
    <description>Notes as to why the record status was closed or put on hold</description>
    <inlineHelpText>Notes as to why the record status was closed or put on hold</inlineHelpText>
    <label>On Hold / Closed Notes</label>
    <type>TextArea</type>
</CustomField>