unpackaged/main/default/objects/Opportunity/fields/SRM_PP_HoldReason__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_HoldReason__c</fullName>
    <description>Reason the record status has been put on hold</description>
    <inlineHelpText>Reason the record status has been put on hold</inlineHelpText>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donor opted for payment holiday</fullName>
            </value>
            <value>
                <fullName>Changed funding priorities</fullName>
            </value>
            <value>
                <fullName>Internal delays</fullName>
            </value>
            <value>
                <fullName>Right contact not yet identified</fullName>
            </value>
            <value>
                <fullName>Rephase - Timing no longer right</fullName>
            </value>
            <value>
                <fullName>Rephase - Changed funding capacity</fullName>
            </value>
            <value>
                <fullName>Rephase - Proposal amends required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>