unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Identification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Identification_End_Date__c</fullName>
    <description>End date of Identification Stage</description>
    <label>Identification End Date</label>
    <type>Date</type>
</CustomField>