unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Identification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Identification_Start_Date__c</fullName>
    <description>Start date of Identification Stage</description>
    <label>Identification Start Date</label>
    <type>Date</type>
</CustomField>