unpackaged/main/default/objects/Opportunity/fields/SRM_PP_IdentificationDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_IdentificationDate__c</fullName>
    <description>Timestamp start date for first stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Identification</inlineHelpText>
    <label>Identification Date</label>
    <type>Date</type>
</CustomField>