unpackaged/main/default/objects/Opportunity/fields/SRM_PP_LeadIdentified__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_LeadIdentified__c</fullName>
    <description>The date the lead was identified</description>
    <inlineHelpText>The date the lead was identified</inlineHelpText>
    <label>Lead Identified</label>
    <type>Date</type>
</CustomField>