unpackaged/main/default/objects/Opportunity/fields/SRM_PP_LeadPriority__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_LeadPriority__c</fullName>
    <description>The priority to research the lead</description>
    <label>Lead Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>