unpackaged/main/default/objects/Opportunity/fields/SRM_PP_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_LeadSource__c</fullName>
    <description>How the lead was identified</description>
    <inlineHelpText>How the lead was identified</inlineHelpText>
    <label>Opportunity Lead Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Targeted (research and email)</fullName>
            </value>
            <value>
                <fullName>Contacted Us</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>Web Inquiry</fullName>
            </value>
            <value>
                <fullName>RSPCA Staff</fullName>
                <isActive>false</isActive>
                <label>RSPCA Staff</label>
            </value>
            <value>
                <fullName>Senior Volunteer Network</fullName>
                <isActive>false</isActive>
                <label>Senior Volunteer Network</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>