unpackaged/main/default/objects/Opportunity/fields/SRM_PP_LeadSourceNotes__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_LeadSourceNotes__c</fullName>
    <description>Lead source note field</description>
    <label>Opportunity Lead Source Notes</label>
    <type>TextArea</type>
</CustomField>