unpackaged/main/default/objects/Opportunity/fields/SRM_PP_NodApproach__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_NodApproach__c</fullName>
    <description>Formula field which calculates the amount of days the Opportunity has been in the Approach stage by subtracting Qualification date from Discovery date OR today’s date from the Approach date (if Discovery stage has not yet been reached).</description>
    <formula>IF(
ISBLANK(SRM_PP_DiscoveryDate__c),
TODAY() - SRM_PP_ApproachDate__c,
SRM_PP_DiscoveryDate__c - SRM_PP_ApproachDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Approach Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>