unpackaged/main/default/objects/Opportunity/fields/SRM_PP_NodContract__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_NodContract__c</fullName>
    <formula>IF(
ISBLANK(
 SRM_PP_StewardshipDate__c ),
TODAY() - 
 SRM_PP_AskContract__c 	,
SRM_PP_StewardshipDate__c - SRM_PP_AskContract__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Ask / Contract Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>