unpackaged/main/default/objects/Opportunity/fields/SRM_PP_NodIdentification__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_NodIdentification__c</fullName>
    <description>Formula field which calculates the amount of days the Opportunity has been in the Identification stage by subtracting Qualification date from Identification date OR today&#39;s date from the Identification date (if Qualification stage has not yet been reached).</description>
    <formula>IF(
ISBLANK(SRM_PP_QualificationDate__c),
TODAY() - SRM_PP_IdentificationDate__c,
SRM_PP_QualificationDate__c - SRM_PP_IdentificationDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Identification Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>