unpackaged/main/default/objects/Opportunity/fields/SRM_PP_NodPlanning__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_NodPlanning__c</fullName>
    <description>Formula field which calculates the amount of days the Opportunity has been in the Planning stage by subtracting Approach date from Planning date OR today’s date from the Planning date (if Approach stage has not yet been reached).</description>
    <formula>IF(
ISBLANK(SRM_PP_ApproachDate__c),
TODAY() - SRM_PP_PlanningDate__c,
SRM_PP_ApproachDate__c - SRM_PP_PlanningDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Planning Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>