unpackaged/main/default/objects/Opportunity/fields/SRM_PP_NodQualification__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_NodQualification__c</fullName>
    <description>Formula field which calculates the amount of days the Opportunity has been in the Qualification stage by subtracting Planning date from Qualification date OR today’s date from the Identification date (if Planning stage has not yet been reached)</description>
    <formula>IF(
ISBLANK(SRM_PP_PlanningDate__c),
TODAY() - SRM_PP_QualificationDate__c,
SRM_PP_PlanningDate__c - SRM_PP_QualificationDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Qualification Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>