unpackaged/main/default/objects/Opportunity/fields/SRM_PP_NodStewardship__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_NodStewardship__c</fullName>
    <formula>TODAY() - SRM_PP_StewardshipDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stewardship Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>