unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Planning_Days__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Planning_Days__c</fullName>
    <formula>IF(
AND(
ISBLANK(SRM_PP_Planning_End_Date__c ),
NOT(ISBLANK(SRM_PP_Planning_Start_Date__c))),
Today() - SRM_PP_Planning_Start_Date__c,
SRM_PP_Planning_End_Date__c- SRM_PP_Planning_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Planning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>