unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Planning_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Planning_End_Date__c</fullName>
    <description>End date of Planning Stage  (accounts)</description>
    <label>Planning End Date</label>
    <type>Date</type>
</CustomField>