unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Planning_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Planning_Start_Date__c</fullName>
    <description>Start date of Planning Stage</description>
    <label>Planning Start Date</label>
    <type>Date</type>
</CustomField>