unpackaged/main/default/objects/Opportunity/fields/SRM_PP_PlanningDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_PlanningDate__c</fullName>
    <description>Timestamp start date for 3rd stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Planning</inlineHelpText>
    <label>Planning Date</label>
    <type>Date</type>
</CustomField>