unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Qualification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Qualification_End_Date__c</fullName>
    <description>End date of Qualification Stage (accounts)</description>
    <label>Qualification End Date</label>
    <type>Date</type>
</CustomField>