unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Qualification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Qualification_Start_Date__c</fullName>
    <description>Start date of Qualification Stage</description>
    <label>Qualification Start Date</label>
    <type>Date</type>
</CustomField>