unpackaged/main/default/objects/Opportunity/fields/SRM_PP_QualificationDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_QualificationDate__c</fullName>
    <description>Timestamp start date for 2nd stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Qualification</inlineHelpText>
    <label>Qualification Date</label>
    <type>Date</type>
</CustomField>