unpackaged/main/default/objects/Opportunity/fields/SRM_PP_RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_RecordStatus__c</fullName>
    <defaultValue>(&quot;Active&quot;)</defaultValue>
    <label>Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Won (Closed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>