unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Stewardship_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Stewardship_End_Date__c</fullName>
    <description>End date of Stewardship Stage (accounts)</description>
    <label>Stewardship End Date</label>
    <type>Date</type>
</CustomField>