unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Stewardship_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Stewardship_Start_Date__c</fullName>
    <description>Start date of Stewardship Stage</description>
    <label>Stewardship Start Date</label>
    <type>Date</type>
</CustomField>