unpackaged/main/default/objects/Opportunity/fields/SRM_PP_StewardshipDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_StewardshipDate__c</fullName>
    <description>Timestamp start date for 8th stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Stewardship</inlineHelpText>
    <label>Stewardship Date</label>
    <type>Date</type>
</CustomField>