unpackaged/main/default/objects/Opportunity/fields/Tax_Point_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Point_Date__c</fullName>
    <label>Tax Point Date</label>
    <type>Date</type>
</CustomField>