unpackaged/main/default/objects/Opportunity/fields/Trout__c.field-meta.xml
<CustomField>
    <fullName>Trout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trout</label>
    <type>Checkbox</type>
</CustomField>