unpackaged/main/default/objects/Opportunity/fields/Turkey__c.field-meta.xml
<CustomField>
    <fullName>Turkey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turkey</label>
    <type>Checkbox</type>
</CustomField>