unpackaged/main/default/objects/Opportunity/fields/Value_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Opportunity__c</fullName>
    <label>Value of Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>