unpackaged/main/default/objects/Opportunity/recordTypes/ia_crm__Contract.recordType-meta.xml
<RecordType>
    <fullName>ia_crm__Contract</fullName>
    <active>false</active>
    <businessProcess>ia_crm__Master</businessProcess>
    <description>Contract Billing workflow</description>
    <label>Contract</label>
</RecordType>