unpackaged/main/default/objects/Opportunity/recordTypes/ia_crm__OrderEntry.recordType-meta.xml
<RecordType>
    <fullName>ia_crm__OrderEntry</fullName>
    <active>true</active>
    <businessProcess>ia_crm__Master</businessProcess>
    <description>Order Entry workflow</description>
    <label>Order Entry</label>
</RecordType>