unpackaged/main/default/objects/Opportunity/recordTypes/Partnerships.recordType-meta.xml
<RecordType>
    <fullName>Partnerships</fullName>
    <active>true</active>
    <businessProcess>Partnerships Pipeline</businessProcess>
    <label>Partnerships</label>
</RecordType>