unpackaged/main/default/objects/Opportunity/validationRules/ia_crm__Lock_Opportunity_from_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Lock_Opportunity_from_editing</fullName>
    <active>false</active>
    <description>Once synched with Intacct, Opportunity&#39;s information cannot be edited anymore.</description>
    <errorConditionFormula>IF(Account.Id = &#39;&#39;, true, false)</errorConditionFormula>
    <errorMessage>This opportunity is locked from editing because it has already been synchronized with Intacct.</errorMessage>
</ValidationRule>