unpackaged/main/default/objects/Opportunity/listViews/AllDonations.listView-meta.xml
<ListView>
    <fullName>AllDonations</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>0121t000000tMoL</value>
    </filters>
    <label>All Donations</label>
</ListView>