unpackaged/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Value_of_Opportunity__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ia_crm__Intacct_Transaction_ID__c</columns>
    <columns>ia_crm__Synced_With_Intacct_Date_1__c</columns>
    <columns>ia_crm__Intacct_Sync_Status_1__c</columns>
    <columns>ia_crm__Intacct_Sync_Errors_1__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>