unpackaged/main/default/objects/Opportunity/listViews/Invoices_Not_Synced.listView-meta.xml
<ListView>
    <fullName>Invoices_Not_Synced</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Value_of_Opportunity__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ia_crm__Intacct_Transaction_ID__c</columns>
    <columns>ia_crm__Synced_With_Intacct_Date_1__c</columns>
    <columns>ia_crm__Intacct_Sync_Status_1__c</columns>
    <columns>ia_crm__Intacct_Sync_Errors_1__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ia_crm__Intacct_Sync_Status_1__c</field>
        <operation>notEqual</operation>
        <value>OK</value>
    </filters>
    <label>Invoices Not Synced</label>
</ListView>