unpackaged/main/default/objects/Opportunity/listViews/Partnerships.listView-meta.xml
<ListView>
    <fullName>Partnerships</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Likelihood_of_Opportunity__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Partnerships</value>
    </filters>
    <label>Partnerships</label>
</ListView>